# weave-rs

./: Cargo.toml  LICENSE  README.md
benches/: benchmark_small.rs  benchmark_small_multi.rs
benches/small/: config.toml
example/: config.toml
src/: app.rs  config.rs  data.rs  error.rs  lib.rs  main.rs  model.rs  threadpool.rs
src/data/: io.rs  number.rs  parquet.rs  types.rs
src/model/: dimenion.rs  distance.rs  kernel.rs
