[package]
name = "weavers"
version = "0.1.0"
authors = ["IHME Math Sciences <ihme.math.sciences@gmail.com>"]
description = """
weavers is a rust package that can help compute weighted averages across
different dimensions according to distances and kernels.
"""
license = "BSD-2-Clause"
edition = "2021"
rust-version = "1.73"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parquet = "48.0.0"
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.2"

[dev-dependencies]
criterion = "0.5"

[profile.release]
codegen-units = 1
panic = "abort"

[[bench]]
name = "benchmark_small"
harness = false

[[bench]]
name = "benchmark_small_multi"
harness = false
